Added auth system and integrated OpenAI with secure env variable